network-policy-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sykmeldinger-db-instance
  namespace: teamsykmelding
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 35.228.113.238/32
  podSelector:
    matchLabels:
      app: sykmeldinger-backend-kafka
  policyTypes:
    - Egress
